# admitd

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ports.yml
admitd/: __init__.py  __main__.py  _ai.py  cli.py  connect.py  core.py  mcp_server.py  server.py
demos/01-basic/: SCENARIO.md  admissionreview.json  hardened-pod.yaml  insecure-pod.yaml
demos/02-deployment-multidoc/: SCENARIO.md  app-bundle.yaml
demos/03-cronjob-batch/: SCENARIO.md  nightly-report.yaml
demos/04-daemonset-node-agent/: SCENARIO.md  log-collector.yaml
demos/05-custom-registry-policy/: SCENARIO.md  deployment.yaml
demos/05-custom-registry-policy/policies/: registry-allowlist.yaml
demos/06-mutate-autoremediate/: SCENARIO.md  under-hardened-pod.yaml
demos/06-mutate-autoremediate/policies/: mutate-hardening.yaml
demos/07-admissionreview-deny/: SCENARIO.md  review-privileged-daemonset.json
demos/08-statefulset-database/: SCENARIO.md  postgres.yaml
demos/09-warn-vs-deny-gate/: SCENARIO.md  web.yaml
demos/09-warn-vs-deny-gate/policies/: labels-warn.yaml
demos/10-helm-rendered-bundle/: SCENARIO.md  rendered.json
docs/: ARCHITECTURE.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: admitd.go  admitd_test.go  go.mod
ports/node/: package.json
ports/node/src/: admitd.mjs  cli.mjs
ports/node/test/: admitd.test.mjs
ports/rust/: Cargo.toml
ports/rust/src/: json.rs  lib.rs  main.rs
tests/: test_connect.py  test_deep.py  test_junit_and_demos.py  test_rules_matrix.py  test_smoke.py
